--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "build": "react-scripts build tsc",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "lint:js": "eslint src/**/*.{js,jsx} --fix"
+    "lint:ts": "eslint src/**/*.{ts,tsx} --fix"
   },
   "eslintConfig": {
     "extends": [
